style.css
/*General Selectors*/
* {
    box-sizing: border-box;
}

body {
    font-family: 'Montserrat', sans-serif;
    font-size: 16px;
    margin: 0;
    padding: 0;
}

/*Header selectors*/
.header-container,
.footer {
    /*background-color for header and footer is same*/
    background-color: #1F2937;
}

ul {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    width: 100%;
    height: 100px;
    padding-right: 20px;
}

li {
    list-style: none;
}

a {
    text-decoration: none;
    padding-left: 16px;
}

